<resources>
    <string name="app_name">Sapi App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Belépés</string>
    <string name="hint_email">email</string>
    <string name="hint_password">jelszó</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Belépés</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Belépés</string>

    <string name="first_names">Családnév</string>
    <string name="last_names">Keresztnév</string>
    <string name="phone_numbers">Telefonszám</string>
    <string name="confirm_password">Jelszó</string>
    <string name="save">Mentés</string>
    <string name="my_advertiserment">Saját hirdetések</string>
    <string name="circleView">Circle View</string>

    <string name="adver_title">Cím</string>
    <string name="adver_text">Leirás</string>
    <string name="adver_location">Válasz helyszínt</string>
    <string name="adver_image">Kép</string>
    <string name="text">Leirás </string>
    <string name="add_adver">Hirdetés hozzáadás</string>
    <!--Menu-->
    <string name="menu_home">Kezdő oldal</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_alladvert">Hirdetések</string>
    <string name="menu_myadvert">Saját hirdetések</string>

    <string name="menu_settings">Beállítás</string>
    <string name="menu_logout">Kilépés</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">activity_menu</string>

    <string name="action_settings">Beállítások</string>

    <string name="advertisement_title">Hirdetések</string>
    <string name="anonymus">Vendég</string>
    <string name="menu_signout">Kilépés</string>

    <string name="title_data">activity_menu</string>
    <string name="call_creator">Tulajdonos hivása</string>
    <string name="menu">Menu</string>
    <string name="description">Leirás:</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="esemenyek_title">Események</string>
    <string name="add_esemeny">Esemény hozzáadása</string>

</resources>
