<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="ro.sapientia.ms.nagyizabella.sapiadvertiserizabellazsofia.SignInActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/sapi" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:text = "@string/app_name"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:layout_below="@+id/icon"
        android:src="@drawable/sapi"
        android:theme="@style/ThemeOverlay.MyTitleText"/>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_below="@+id/title"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_signin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:text="@string/signin" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_google_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_button"
        android:paddingTop="16dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/google_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/et_email"
            android:layout_marginStart="20dp"
            android:background="@drawable/google"
            android:layout_gravity = "bottom" />

        <Button
            android:id="@+id/facebook_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:shadowRadius="5"
            android:textColor="#000000"
            android:layout_toRightOf="@id/google_btn"
            android:background="@drawable/facebook"
            android:textSize="18sp"/>
    </LinearLayout>


</RelativeLayout>

