<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sv_detail"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="ro.sapientia.ms.nagyizabella.sapiadvertiserizabellazsofia.AddAdvertisementActivity"
    android:background="@color/colorWhite">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_description"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/adver_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/adver_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="18dp"
                android:textSize="20sp"
                android:hint="Title"
                android:textColor="@color/colorBase"
                android:textColorHint="@color/colorHint"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/adver_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scrollbars = "vertical"
                android:paddingTop="18dp"
                android:textSize="15sp"
                android:hint="..........................................."
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorBase"
                android:textAlignment="center" />
        </LinearLayout>


    <Button
        android:id="@+id/adver_image"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/adver_header"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:text="@string/adver_image"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

    <LinearLayout
        android:id="@+id/ll_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/adver_image">
        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_image"
            android:scrollbars = "vertical"
            android:numColumns="4"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:cacheColorHint="@color/colorPrimaryDark"
            />
    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_image"
        tools:context="com.example.phoneb.mapsss.MapsActivity" />
    <Button
        android:id="@+id/add_adver"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/add_adver"
        android:layout_below="@id/map"
        android:textSize="15dp"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>
</ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu"
        app:headerLayout="@layout/nav_header_profile"/>

</android.support.v4.widget.DrawerLayout>



