<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.sapientia.ms.nagyizabella.sapiadvertiserizabellazsofia.AdvertisementData">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AdvertisementData"
        android:background="@color/colorWhite">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/picture_header"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/idImageViewSemafor"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1.14"
                    android:adjustViewBounds="true"
                    android:background="#66FFFFFF"
                    android:src="@drawable/noimg" />

                <TextView
                    android:id="@+id/title_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"
                    android:textSize="25dp"
                    android:text="Title"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/nextprev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/prev_image"
                android:gravity="left"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="72sp"
                android:textColor="@color/colorWhite"
                android:text="@string/prev"/>
            <TextView
                android:id="@+id/next_image"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textSize="72sp"
                android:textColor="@color/colorWhite"
                android:text="@string/next"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/description_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@id/picture_header"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"  />

                <TextView
                    android:id="@+id/adver_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:scrollbars = "vertical"
                    android:paddingTop="18dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorBase"
                    android:textColorHint="@color/colorHint"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/mapview_header"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/description_header"
                android:orientation="vertical"
                android:background="@color/colorDivider">
<!--
               <com.google.android.gms.maps.MapView
                   android:id="@+id/mapview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    />
-->

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cv_profileImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft= "25dp"
                android:layout_marginBottom="1dp"
                android:layout_below="@id/mapview_header"
                android:src="@drawable/profile_base"
                />

            <TextView
                android:id="@+id/creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft= "37dp"
                android:text="Creator"
                android:layout_below="@id/cv_profileImage"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:ignore="HardcodedText"
                android:textColor="@color/colorBase"/>
            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft= "37dp"
                android:text="Phone number"
                android:layout_below="@id/creator"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:ignore="HardcodedText"
                android:textColor="@color/colorBase"/>

            <Button
                android:id="@+id/bt_call"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/cv_profileImage"
                android:layout_alignEnd="@+id/mapview_header"
                android:layout_marginEnd="23dp"
                android:background="@drawable/buttonshape"
                android:padding="10dp"
                android:text="Call creator"
                android:textColor="@color/colorWhite"
                android:textSize="12dp"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

    </RelativeLayout>
    </ScrollView>

    </android.support.v4.widget.DrawerLayout>
